--- a/CSS/style.css
+++ b/CSS/style.css
@@ -246,12 +246,47 @@ nav {
     }
 
     #page6 {
-        height: 84vh;
+        height: auto;
         width: 100%;
         background-color: #f4f2f2;
         position: relative;
     }
 
+    .value-item {
+        flex: auto;
+        padding: 4px;
+    }
+
+    .testimonial-card {
+        /* background-color: #fafafa; */
+        padding: 15px;
+        width: 328px;
+
+    }
+
+    .tailor-left {
+        margin-bottom: auto;
+        background-color: #111;
+        padding: 20px;
+        width: 50%;
+        color: white;
+        font-family: 'Arial', sans-serif;
+    }
+
+    .tailor-right {
+        flex: 1;
+        /* background-size: cover; */
+        /* background-position: center; */
+        /* margin-bottom: 83%; */
+    }
+
+    .tailor-made-section {
+        background: url(http://www.preciousmomentssafaris.com/wp-content/uploads/2024/07/TailorMade-scaled.jpeg);
+        display: flex;
+        color: #fff;
+        min-height: auto;
+        background-size: cover;
+    }
 
     #page-safaris {
         display: flex;
@@ -269,8 +304,8 @@ nav {
     }
 
     .park-item img {
-        width: 259px;
-        height: 104px;
+        width: 188px;
+        height: 98px;
     }
 
     .tailor-hero {
@@ -292,5 +327,51 @@ nav {
         padding: 10px 10px;
         /* height: 100%; */
         /* width: 100%; */
+    }
+
+    .parks-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+        gap: 0px;
+        width: auto;
+        margin-left: 0;
+        justify-items: center;
+    }
+
+
+    #page4-right p {
+        font-size: 15px;
+        /* font-family: Arial, sans-serif; */
+        /* color: #2f2f2f; */
+        /* margin-top: 14px; */
+        /* line-height: 1.6; */
+    }
+
+
+    .hero-content h1 {
+        font-size: 2em;
+        font-weight: bold;
+        /* max-width: 900px; */
+        /* margin: auto; */
+        /* line-height: 1.3; */
+        font-family: 'Lagency', serif;
+    }
+
+
+    .hero-content {
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        transform: translate(0%, 0%);
+        text-align: center;
+        color: white;
+        padding: 76px;
+    }
+
+    .btn-main {
+        /* display: inline-block; */
+        /* margin-top: 20px; */
+        /* background-color: #d4a94f; */
+        padding: 8px 9px;
     }
 }
