--- a/CSS/style.css
+++ b/CSS/style.css
@@ -248,7 +248,7 @@ nav {
     #page6 {
         height: auto;
         width: 100%;
-        background-color: #f4f2f2;
+        background-color: #e1dada;
         position: relative;
     }
 
@@ -258,9 +258,9 @@ nav {
     }
 
     .testimonial-card {
-        /* background-color: #fafafa; */
+        background-color: #c7c5c5;
         padding: 15px;
-        width: 328px;
+        width: auto;
 
     }
 
@@ -298,7 +298,7 @@ nav {
     }
 
     #testimonials {
-        padding: 30px 40px 48px;
+        padding: 30px 10px 48px;
         background-color: #fff;
         text-align: center;
     }
@@ -360,7 +360,7 @@ nav {
 
     .hero-content {
         position: absolute;
-        top: 0%;
+        top: auto;
         left: 0%;
         transform: translate(0%, 0%);
         text-align: center;
@@ -373,5 +373,14 @@ nav {
         /* margin-top: 20px; */
         /* background-color: #d4a94f; */
         padding: 8px 9px;
+    }
+
+    .safari-points {
+        display: flex;
+        justify-content: center;
+        gap: 0px;
+        flex-wrap: wrap;
+        margin-bottom: 60px;
+        flex-direction: column;
     }
 }
