--- a/he.css
+++ b/he.css
@@ -5,7 +5,7 @@ body {
 }
 
 .filter-container {
-  background: #fff;
+  background: hsl(0, 20%, 98%);
   padding: 30px 40px;
   border-radius: 20px;
   max-width: 1000px;
