--- a/CSS/style.css
+++ b/CSS/style.css
@@ -303,10 +303,10 @@ nav {
         text-align: center;
     }
 
-    .park-item img {
+    /* .park-item img {
         width: 188px;
         height: 98px;
-    }
+    } */
 
     .tailor-hero {
         position: relative;
