--- a/kat.css
+++ b/kat.css
@@ -145,10 +145,10 @@ details p {
 }
 
 h1 {
-  font-size: 48px;
+  font-size: 40px;
   font-weight: bold;
   line-height: 1.2;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   color: #fff;
 }
 
@@ -749,4 +749,25 @@ nav {
   .map-container iframe { width: 100%; height: 35%; }
 
   .btn-main, .cta-button, .btn-top { padding: 8px 12px; font-size: 11px; }
+}
+@media (max-width: 400px){h1 {
+    /* font-size: 40px; */
+    /* font-weight: bold; */
+    /* line-height: 1.2; */
+     margin-top: 40px; */
+    /* color: #fff; */
+}
+}
+@media (max-width: 400px) {
+    nav {
+        /* padding: 2vw 4vw; */
+        /* width: 100%; */
+        /* display: flex
+; */
+        position: relative;
+        /* z-index: 100; */
+        /* background: rgba(0, 0, 0, 0.3); */
+        /* flex-direction: row; */
+        /* justify-content: space-between; */
+    }
 }
