--- a/Ngorongoro.css
+++ b/Ngorongoro.css
@@ -848,3 +848,10 @@ nav {
   .map-container iframe { width: 100%; height: 35%; }
 }
 
+@media (max-width: 480px) {
+#page10 > h1 {
+  margin-top: 4dvh;
+}
+}
+
+
