--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -203,17 +203,15 @@ nav {
 }
 
 
-/* ///////////////////////////// */
+/* /////////////page 18//////////////// */
 
 @media (max-width: 480px) {
 
 
     .hero {
-        position: relative;
-        height: 65vh;
         width: 100%;
-        overflow: hidden;
-        z-index: 0;
+        
+        
     }
-
+   
 }
