--- a/page18.css
+++ b/page18.css
@@ -410,3 +410,15 @@ footer {
     margin: 15px;
   }
 }
+
+@media (max-width: 480px) {
+  .bg-video {
+    /* position: absolute; */
+    /* top: 0; */
+    /* left: 0; */
+    /* width: 100vw; */
+    height: 100%;
+    /* object-fit: cover; */
+    z-index: -1;
+}
+}
